fixes spacing on accidentals

--- a/sketch/scale.css
+++ b/sketch/scale.css
@@ -33,6 +33,11 @@ li {
     padding: 0.4rem;
     position: relative;
 }
+.scale .note .accidental {
+    margin-left: -0.25rem;
+    margin-right: -0.25rem;
+}
+/* Major */
 .scale-type-major .scale .note:nth-child(1) {
     right: 1.65rem;
 }
@@ -43,17 +48,41 @@ li {
     right: 0.25rem;
 }
 .scale-type-major .scale .note:nth-child(4) {
-
 }
 .scale-type-major .scale .note:nth-child(5) {
-    left: 0.75rem
+    left: 0.75rem;
 }
 .scale-type-major .scale .note:nth-child(6) {
-    left: 1.25rem
+    left: 1.25rem;
 }
 .scale-type-major .scale .note:nth-child(7) {
-    left: 1.75rem
+    left: 1.75rem;
 }
 .scale-type-major .scale .note:nth-child(8) {
-    left: 1.75rem
+    left: 1.75rem;
+}
+/* Minor */
+.scale-type-minor .scale .note:nth-child(1) {
+    right: 2.0rem;
+}
+.scale-type-minor .scale .note:nth-child(2) {
+    right: 1.25rem;
+}
+.scale-type-minor .scale .note:nth-child(3) {
+    right: 1.0rem;
+}
+.scale-type-minor .scale .note:nth-child(4) {
+    right: 0.25rem;
+}
+.scale-type-minor .scale .note:nth-child(5) {
+    left: 0.50rem
+}
+.scale-type-minor .scale .note:nth-child(6) {
+    left: 0.65rem
+}
+.scale-type-minor .scale .note:nth-child(7) {
+    left: 1.25rem
+}
+.scale-type-minor .scale .note:nth-child(8) {
+    left: 2.0rem
 }
